--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -11,3 +11,13 @@ libs.JavaFX.classpath=\
     ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.media.jar:\
     ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.swing.jar:\
     ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.web.jar
+libs.JAVAFX11.classpath=\
+    ${base}/JAVAFX11/lib;\
+    ${base}/JAVAFX11/javafx-swt.jar;\
+    ${base}/JAVAFX11/javafx.base.jar;\
+    ${base}/JAVAFX11/javafx.controls.jar;\
+    ${base}/JAVAFX11/javafx.fxml.jar;\
+    ${base}/JAVAFX11/javafx.graphics.jar;\
+    ${base}/JAVAFX11/javafx.media.jar;\
+    ${base}/JAVAFX11/javafx.swing.jar;\
+    ${base}/JAVAFX11/javafx.web.jar
