fix: problems with libraries

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,6 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.acountIPC.jar}:\
     ${file.reference.sqlite-jdbc-3.41.2.1.jar}:\
-    ${libs.JavaFX.classpath}:\
     ${libs.JAVAFX11.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -93,7 +92,7 @@ run.classpath=\
 run.jvmargs=--add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
-    ${libs.JavaFX.classpath}
+    ${libs.JAVAFX11.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
