--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,6 +49,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.acountIPC.jar}:\
+    ${libs.JAVAFX11.classpath}:\
     ${file.reference.sqlite-jdbc-3.41.2.1.jar}:\
     ${file.reference.javafx-swt.jar}:\
     ${file.reference.javafx.base.jar}:\
