--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\ICATFOR\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\MITORNAG\\AppData\\Roaming\\NetBeans\\18\\build.properties
