--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,21 +2,12 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=3.0
-libs.JavaFX.classpath=\
-    ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx-swt.jar:\
-    ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.base.jar:\
-    ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.controls.jar:\
-    ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.fxml.jar:\
-    ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.graphics.jar:\
-    ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.media.jar:\
-    ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.swing.jar:\
-    ${base}/../../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.web.jar
 libs.JAVAFX11.classpath=\
-    ${base}/JAVAFX11/javafx-swt.jar:\
-    ${base}/JAVAFX11/javafx.base.jar:\
-    ${base}/JAVAFX11/javafx.controls.jar:\
-    ${base}/JAVAFX11/javafx.fxml.jar:\
-    ${base}/JAVAFX11/javafx.graphics.jar:\
-    ${base}/JAVAFX11/javafx.media.jar:\
-    ${base}/JAVAFX11/javafx.swing.jar:\
-    ${base}/JAVAFX11/javafx.web.jar
+    C:/Program Files/Java/javafx-sdk-20.0.1/lib/javafx-swt.jar;\
+    C:/Program Files/Java/javafx-sdk-20.0.1/lib/javafx.base.jar;\
+    C:/Program Files/Java/javafx-sdk-20.0.1/lib/javafx.controls.jar;\
+    C:/Program Files/Java/javafx-sdk-20.0.1/lib/javafx.fxml.jar;\
+    C:/Program Files/Java/javafx-sdk-20.0.1/lib/javafx.graphics.jar;\
+    C:/Program Files/Java/javafx-sdk-20.0.1/lib/javafx.media.jar;\
+    C:/Program Files/Java/javafx-sdk-20.0.1/lib/javafx.swing.jar;\
+    C:/Program Files/Java/javafx-sdk-20.0.1/lib/javafx.web.jar
