--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,29 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/proyectoIPC
 endorsed.classpath=
 excludes=
 file.reference.acountIPC.jar=lib/acountIPC.jar
-file.reference.javafx-swt.jar=../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx-swt.jar
-file.reference.javafx.base.jar=../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.base.jar
-file.reference.javafx.controls.jar=../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.controls.jar
-file.reference.javafx.fxml.jar=../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.fxml.jar
-file.reference.javafx.graphics.jar=../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.graphics.jar
-file.reference.javafx.media.jar=../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.media.jar
-file.reference.javafx.swing.jar=../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.swing.jar
-file.reference.javafx.web.jar=../../openjfx-21.0.2_linux-x64_bin-sdk/javafx-sdk-21.0.2/lib/javafx.web.jar
 file.reference.sqlite-jdbc-3.41.2.1.jar=lib/sqlite-jdbc-3.41.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.acountIPC.jar}:\
     ${libs.JAVAFX11.classpath}:\
-    ${file.reference.sqlite-jdbc-3.41.2.1.jar}:\
-    ${file.reference.javafx-swt.jar}:\
-    ${file.reference.javafx.base.jar}:\
-    ${file.reference.javafx.controls.jar}:\
-    ${file.reference.javafx.fxml.jar}:\
-    ${file.reference.javafx.graphics.jar}:\
-    ${file.reference.javafx.media.jar}:\
-    ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}
+    ${file.reference.sqlite-jdbc-3.41.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -108,14 +92,7 @@ run.classpath=\
 run.jvmargs=--add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
-    ${file.reference.javafx-swt.jar}:\
-    ${file.reference.javafx.base.jar}:\
-    ${file.reference.javafx.controls.jar}:\
-    ${file.reference.javafx.fxml.jar}:\
-    ${file.reference.javafx.graphics.jar}:\
-    ${file.reference.javafx.media.jar}:\
-    ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}
+    ${libs.JAVAFX11.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
